@@ -298,8 +298,10 @@
 #
 #total-quota=0
 
-# Per-session bandwidth quota, in bytes.
-# default value is 0 (no quota, unlimited traffic).
+# Max bytes-per-second bandwidth a TURN session is allowed to handle
+# (input and output network streams are treated separately). Anything above
+# that limit will be dropped or temporary suppressed (within
+# the available buffer limits).
 #
 #max-bps=0
 
